# Medisense

./: README.md  act.bat  agent_10_vision.py  agent_1_extraction.py  agent_2_rag.py  agent_3_triage.py  agent_4_updater.py  agent_5_pure_llm.py  agent_6_combiner.py  agent_7_translator.py  agent_8_followup.py  agent_9_whisper.py  api_server.py  details.md  expand_database_batch.py  main.py  main_agent_workflow.py  pyproject.toml  requirements.txt  setup_vectordb.py  test_multilingual.py
MasterData/: symptom_Description.csv  symptom_precaution.csv
chroma_db/: chroma.sqlite3
frontend/src/: App.tsx  index.css
